<resources>
    <string name="app_name">JamesApp</string>
    <string name="mercury_name">Memory</string>
    <string name="earth_name">About</string>
    <string name="mars_name">Wallpaper</string>
    <string name="jupiter_name">Jupiter</string>
    <string name="saturn_name">Saturn</string>
    <string name="uranus_name">Uranus</string>
    <string name="neptune_name">Neptune</string>
    <string name="venus_name">Quiz</string>
    <string name="solar_orbit">
        A Solar Orbit
The James Webb Space Telescope will not be in orbit around the Earth, like the Hubble Space Telescope is - it will actually orbit the Sun, 1.5 million kilometers (1 million miles) away from the Earth at what is called the second Lagrange point or L2. What is special about this orbit is that it lets the telescope stay in line with the Earth as it moves around the Sun. This allows the satellite\'s large sunshield to protect the telescope from the light and heat of the Sun and Earth (and Moon).
    </string>
    <string name="space">
        Space
    </string>

    <string name="JWST">
        Origins of JWST
Work on the project began over 30 years ago at STScI with a challenge from Institute Director Riccardo Giacconi to “think about the next major mission beyond Hubble.” The development of a mission concept came in September 1989, with a workshop held at STScI, before Hubble was launched. \n The James Webb Space Telescope was launched on 25 December 2021 on an Ariane 5 rocket from Kourou, French Guiana, and arrived at the Sun–Earth L2 Lagrange point in January 2022. The first image from JWST was released to the public via a press conference on 11 July 2022.

JWST\'s primary mirror consists of 18 hexagonal mirror segments made of gold-plated beryllium, which combined create a 6.5-meter-diameter (21 ft) mirror, compared with Hubble\'s 2.4 m (7 ft 10 in). This gives JWST a light-collecting area of about 25 square meters, about six times that of Hubble. Unlike Hubble, which observes in the near ultraviolet and visible (0.1 to 0.8 μm), and near infrared (0.8–2.5 μm)[11] spectra, JWST observes in a lower frequency range, from long-wavelength visible light (red) through mid-infrared (0.6–28.3 μm). The telescope must be kept extremely cold, below 50 K (−223 °C; −370 °F), such that the infrared light emitted by the telescope itself does not interfere with the collected light. It is deployed in a solar orbit near the Sun–Earth L2 Lagrange point, about 1.5 million kilometers (930,000 mi) from Earth, where its five-layer sunshield protects it from warming by the Sun, Earth, and Moon.
    </string>
    <string name="L2">
        What is L2?
Joseph-Louis Lagrange was an 18th century mathematician who found the solution to what is called the “three-body problem.” That is, is there any stable configuration, in which three bodies could orbit each other, yet stay in the same position relative to each other? As it turns out, there are five solutions to this problem - and they are called the five Lagrange points, after their discoverer. At Lagrange points, the gravitational pull of two large masses precisely equals the centripetal force required for a small object to move with them. The L1, L2, and L3 points are all in line with each other - and L4 and L5 are at the points of equilateral triangles.
+
Diagram showing the Sun, the Earth, Webb, and the Lagrange points
Lagrange Points.
The first Sun-Earth Lagrange point, L1, is 1.5 million km from the Earth towards the Sun, and there have been many solar observatories located here, including DSCOVR, WIND, SOHO, and ACE.
There have been other satellites out at Sun-Earth L2, where Webb will be, including WMAP, Herschel, and Planck.
    </string>

    <string-array name="gameModeArray">
        <item>2x2</item>
        <item>4x4</item>
        <item>6x6</item>
        <item>8x8</item>
    </string-array>
    <string name="resultText">Затраченное время\n</string>

    <string name="memory">
        Among its most important goals, JWST will see the light from the universe’s first stars and galaxies.
    </string>

    <string name="memory14">
        MIRI is inspected in the giant clean room at NASA’s Goddard Space Flight Center in Greenbelt, Maryland, in 2012. Credit: NASA/Chris Gunn.
    </string>
    <string name="memory13">
        Hubble Space Telescope images in the optical (top) and near-infrared (bottom) of the Eagle Nebula’s Pillars of Creation. These images show how infrared light can peer through obscuring dust and gas and reveal star and planet formation within these giant galactic stellar nurseries. Credit: NASA, ESA/Hubble and the Hubble Heritage Team.
    </string>
    <string name="memory12">
        A prototype of a mask used in the Canadian NIRISS instrument in AMI mode, showing the layout of the seven hexagonal holes in the mask with respect to the Webb primary mirror segments and secondary mirror supports. (Credit: Anand Sivaramakrishnan/Space Telescope Science Institute)
    </string>
    <string name="memory11">
        Part of the Webb team in front of a full-scale model at NASA’s Goddard Space Flight Center in Greenbelt, Maryland, in 2005. Credit: NASA
    </string>
    <string name="memory10">
        Jupiter and some of its moons are seen through NIRCam’s 3.23 micron filter. Credits: NASA, ESA, CSA, and B. Holler and J. Stansberry (STScI)
    </string>

    <string name="memory9">
        The James Webb Space Telescope will not be in orbit around the Earth, like the Hubble Space Telescope is - it will actually orbit the Sun, 1.5 million kilometers (1 million miles) away from the Earth at what is called the second Lagrange point or L2.
    </string>

    <string name="memory8">
        Orion is NASA\'s new exploration spacecraft, designed to carry astronauts to destinations in deep space, including an asteroid and Mars.
    </string>
    <string name="memory7">
        NASA - National Aeronautics and Space Administration.
    </string>
    <string name="memory6">
        Gold layers plating the scope’s mirrors are only 1,000 atoms thick. Indeed, only a golf-ball-sized amount of gold was used to coat the entire 21-foot-wide mirror.
    </string>
    <string name="memory5">
        On December 25, 2021, the telescope was successfully launched from the Kourou spaceport using the Ariane-5 rocket.
    </string>
    <string name="memory4">
        The largest space telescope with the largest mirror
    </string>
    <string name="memory3">
        Perseverance rover will look for signs of past microbial life, cache rock and soil samples, and prepare for future human exploration.
    </string>
    <string name="memory2">
         1.5 million kilometers (1 million miles) away from the Earth at what is called the second Lagrange point or L2.
    </string>
    <string name="memory1">
        Unique image of jupiter from James Webb
    </string>
    <string name="solar_system">The Solar System is the gravitationally bound system of the Sun and the objects that orbit it. It formed 4.6 billion years ago from the gravitational collapse of a giant interstellar molecular cloud. The vast majority 99.86% of the system\'s mass is in the Sun, with most of the remaining mass contained in the planet Jupiter. The four inner system planets Mercury, Venus, Earth and Mars are terrestrial planets, being composed primarily of rock and metal. The four giant planets of the outer system are substantially larger and more massive than the terrestrials. The two largest, Jupiter and Saturn, are gas giants, being composed mainly of hydrogen and helium the next two, Uranus and Neptune, are ice giants, being composed mostly of volatile substances with relatively high melting points compared with hydrogen and helium, such as water, ammonia, and methane. All eight planets have nearly circular orbits that lie near the plane of Earth\'s orbit, called the ecliptic</string>

    <string name="hublle">
        The Earth\'s atmosphere is the bane of astronomers. The idea of sending a telescope into space to avoid it was first proposed long before the first satellites were launched, long before anyone even dreamt of sending astronauts to space, German rocket scientist Herman Oberth was a pioneering thinker of his time and suggested a space bound telescope as early as 1923 in his book Die Rakete zu den Planeträumen. A space telescope avoids frustrating problems such as cloudy and misty observing nights, the twinkling of stars even on clear nights and absorption of the ultraviolet and infrared parts of the spectrum.
It took many years before technology caught up with Oberth\'s idea. The American Lyman Spitzer proposed a more realistic plan for a space telescope in 1946 and lobbied for his idea for almost 30 years. In the 1970s NASA and the European Space Agency took up the idea and proposed a 3 metre space telescope. Funding began to flow in 1977 and it was decided to name the telescope after Edwin Powell Hubble who had discovered the expansion of the Universe in the 1920s. Although the Hubble Space Telescope was down sized to 2.4 metres the project started to attract significant attention from astronomers
        </string>
    <string name="milky_way">
        The Milky Way is the galaxy that includes our Solar System, with the name describing the galaxy\'s appearance from Earth: a hazy band of light seen in the night sky formed from stars that cannot be individually distinguished by the naked eye. The term Milky Way is a translation of the Latin via lactea, from the Greek γαλακτικός κύκλος (galaktikos kýklos), meaning "milky circle". From Earth, the Milky Way appears as a band because its disk-shaped structure is viewed from within. Galileo Galilei first resolved the band of light into individual stars with his telescope in 1610. Until the early 1920s, most astronomers thought that the Milky Way contained all the stars in the Universe. Following the 1920 Great Debate between the astronomers Harlow Shapley and Heber Curtis observations by Edwin Hubble showed that the Milky Way is just one of many galaxies.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fact_webbs_telescope">One Side of the Telescope Is Hotter Than Death Valley, the Other Side Is Colder Than Antarctica</string>
    <string name="memory_title">James\nApp</string>
    <string name="select_game_level">Select difficulty level</string>
    <string name="apply">Apply</string>
</resources>